Update MatchingUtil