@@ -1,13 +1,14 @@
 package io.github.anton_petunov.cynteka_test.util;
 
+import io.github.anton_petunov.cynteka_test.to.DataTo;
+
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class MatchingUtil {
     int windowSize = 3;
 
-    public static String divideAndMatch(String first, String second) {
+    public static DataTo divideAndMatch(String first, String second) {
         String separated;
         String undivided;
         if (first.length() <= second.length()) {
@@ -21,16 +22,9 @@ public class MatchingUtil {
         for (int i = 0; i < separated.length() - 2; i++) {
             parts.add(separated.substring(i, i + 3));
         }
-        System.out.println(parts);
-
-        System.out.println(parts.stream()
+        Integer count = parts.stream()
                 .filter(s -> undivided.toLowerCase().contains(s.toLowerCase()))
-                .collect(Collectors.toList()));
-
-        System.out.println((int) parts.stream()
-                .filter(s -> undivided.toLowerCase().contains(s.toLowerCase())).count());
-
-        return first + ": " + second + ", score: " + parts.stream()
-                .filter(s -> undivided.toLowerCase().contains(s.toLowerCase())).count();
+                .toList().size();
+        return new DataTo(first, second, count);
     }
 }
